# py-dipend

./: CONTRIBUTING.md  README.md  Taskfile.yaml  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/: FUNDING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yaml  config.yaml  feature.yaml  question.yaml
.github/workflows/: cla.yaml  publish-dipend-graph.yaml  publish-dipend.yaml
.taskfile/: packages.taskfile.yaml
scripts/: add-license-header.py  normalize-version.py
tests/dipend_unit_tests/: test_dependency_container.py
tests/dipend_unit_tests/commands/add_dependency/: test_add_dependency_command_handler.py
tests/dipend_unit_tests/commands/resolve_dependency/: test_resolve_dependency_command_handler.py
tests/dipend_unit_tests/commands/resolve_specific_lifecycles/: test_resolve_specific_lifecycles_command_handler.py
tests/dipend_unit_tests/context/: test_context_store.py
tests/dipend_unit_tests/decorators/: test_inject_mapped_dependency.py
tests/dipend_unit_tests/dependency/: test_dependency_resolver.py  test_dependency_store.py
tests/dipend_unit_tests/dependency/resolve_lifecycle_strategies/: test_base_resolve_lifecycle_strategy.py  test_resolve_context_lifecycle_strategy.py  test_resolve_singleton_lifecycle_strategy.py  test_resolve_transient_lifecycle_strategy.py
tests/dipend_unit_tests/exceptions/: test_exception_handler.py
tests/dipend_unit_tests/token/: test_token_name_resolver.py  test_token_store.py  test_token_type_resolver.py
(+4 files in other folders)
